Styled dashboard, modified styling, added user status

--- a/app/assets/stylesheets/pages/dashboard.scss
+++ b/app/assets/stylesheets/pages/dashboard.scss
@@ -9,8 +9,19 @@
   justify-content: space-between;
 }
 
+.dashboard-title {
+  font-size: $large-font;
+  text-align: center;
+  border-bottom: 1px solid $color2;
+  padding-bottom: 5px;
+  margin-bottom: 10px;
+}
+
+// LEFT SIDE
+
 .dashboard-content-left {
   width: 30%;
+  min-width: 250px;
 }
 
 .dashboard-profile {
@@ -21,6 +32,21 @@
   border-bottom: 1px solid $color1;
 }
 
+.dashboard-profile-details {
+  text-align: center;
+}
+
+.dashboard-status {
+  border-style: none;
+  font-size: 20px;
+  background-color: inherit;
+  border-top: 1px solid black;
+  padding: 10px;
+  width: 100%;
+  margin-top: 75px;
+  outline: none;
+}
+
 .dashboard-cats {
   margin: 20px;
   padding: 20px;
@@ -28,16 +54,39 @@
   border-bottom: 1px solid $color1;
 }
 
-.dashboard-cats li {
+.catlist {
   transition: background-color .2s;
-  padding: 5px;
+  padding: 10px;
+  border-bottom: 1px solid $color1;
 }
 
-.dashboard-cats li:hover {
+.catlist:hover {
   background-color: $color3;
 }
 
+.catlist-detail {
+  padding-bottom: 5px;
+}
 
+.dashboard-catForm {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.dashboard-catForm input{
+  font-size: $normal-font;
+  margin-bottom: 5px;
+  border-top-style: none;
+  border-left-style: none;
+  border-right-style: none;
+}
+
+.dashboard-catForm input:focus {
+  outline:none;
+}
+
+// RIGHT SIDE
 
 .dashboard-content-right {
   width: 70%;
