--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -11,6 +11,8 @@
         ).html_safe %>
       <% end %>
     </script>
+    <link href="https://fonts.googleapis.com/css?family=Pacifico|Roboto" rel="stylesheet">
+
   </head>
   <body>
     <main id="root">
