Styled search page, added host list, added google maps

--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -3,3 +3,9 @@ $color2: #784F8A;
 $color3: #EAE9F0;
 $color4: #F2E2AE;
 $color5: #BDB5A5;
+
+$color1rgb: 181, 165, 189;
+$color2rgb: 120, 79, 138;
+$color3rgb: 234, 233, 240;
+$color4rgb: 242, 226, 174;
+$color5rgb: 189, 181, 165;
