--- a/app/assets/stylesheets/pages/dashboard.scss
+++ b/app/assets/stylesheets/pages/dashboard.scss
@@ -43,7 +43,7 @@
   border-top: 1px solid black;
   padding: 10px;
   width: 100%;
-  margin-top: 75px;
+  margin-top: 50px;
   outline: none;
 }
 
@@ -52,6 +52,8 @@
   padding: 20px;
   background-color: white;
   border-bottom: 1px solid $color1;
+  overflow-y: scroll;
+  height: 60%;
 }
 
 .catlist {
