--- a/app/assets/stylesheets/pages/session-page.scss
+++ b/app/assets/stylesheets/pages/session-page.scss
@@ -5,10 +5,9 @@
 
 .session-page-form-container {
   display: flex;
-  justify-content: flex-start;
-  padding-left: 25%;
+  justify-content: center;
   width: inherit;
-  height: 55%;
+  height: 85%;
   background-image: url(/assets/main-cats.png);
   background-size: cover;
 }
@@ -18,7 +17,7 @@
   padding: 25px;
   width: 300px;
   align-self: center;
-  background-color: $color1;
+  background-color: rgba($color1, 0.5);
   opacity: .9;
   box-shadow: 2px 2px gray;
 }
