--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -11,6 +11,11 @@
         ).html_safe %>
       <% end %>
     </script>
+
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDo4i-HPR9688-vz52mGlmEYt6O3yu4pmE&libraries=places">
+    </script>
+
     <link href="https://fonts.googleapis.com/css?family=Pacifico|Roboto" rel="stylesheet">
 
   </head>
