fixed homepage and login styling

--- a/app/assets/stylesheets/pages/header.scss
+++ b/app/assets/stylesheets/pages/header.scss
@@ -1,5 +1,5 @@
 .header {
-  height: 7%;
+  height: 10%;
   display: flex;
   justify-content: space-between;
   padding-left: 10px;
@@ -19,6 +19,7 @@
   width: 70%;
   margin: 20px;
   border-radius: 5px;
+  padding-left: 10px;
 }
 
 .header-search-icon {
