--- a/app/assets/stylesheets/pages/session-page.scss
+++ b/app/assets/stylesheets/pages/session-page.scss
@@ -7,24 +7,37 @@
   display: flex;
   justify-content: center;
   width: inherit;
-  height: 85%;
-  background-image: url(/assets/main-cats.png);
+  height: 90%;
+  background-color: $color3;
   background-size: cover;
 }
 
 .session-page-form {
-  border: 1px solid black;
   padding: 25px;
   width: 300px;
   align-self: center;
-  background-color: rgba($color1, 0.5);
-  opacity: .9;
-  box-shadow: 2px 2px gray;
+  background-color: white;
+  border-bottom: 1px solid $color1;
+}
+
+.formType {
+  text-align: center;
 }
 
 .session-page-form input {
   font-size: $normal-font;
   margin-bottom: 5px;
+  width: 100%;
+}
+
+.choice-link {
+  color: blue;
+  cursor: pointer;
+}
+
+.credential-choice {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
