--- a/app/assets/stylesheets/pages/home-page.scss
+++ b/app/assets/stylesheets/pages/home-page.scss
@@ -1,18 +1,19 @@
 .home-page {
-  height: 100%;
+  height: 100vh;
 }
 
 .home-page-header {
-  height: 7%;
+  height: 10%;
   display: flex;
   justify-content: space-between;
   padding-left: 10px;
   padding-right: 10px;
+  border-bottom: 1px solid $color1;
 }
 
 
 .home-page-main {
-  height: 55%;
+  height: 90%;
   background-image: url(/assets/main-cats.png);
   background-size:cover;
   display: flex;
@@ -48,18 +49,4 @@
   height: 30%;
   background-color: $color5;
   padding: 25px;
-}
-
-.home-page-desc h1 {
-  padding: 10px;
-  font-size: $large-font;
-  color: white;
-  text-shadow: 1px 1px $color1;
-}
-
-.home-page-desc p {
-  padding: 10px;
-  font-size: $normal-font;
-  color: white;
-  text-shadow: 1px 1px $color1;
 }
