--- a/app/assets/stylesheets/pages/search.scss
+++ b/app/assets/stylesheets/pages/search.scss
@@ -13,14 +13,18 @@
 // LEFT
 .search-page-left {
   width: 30%;
-  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: 60px;
 }
 
 .search-page-list {
   margin: 20px;
   padding: 30px;
   width: 100%;
-  height: 80%;
+  height: 70%;
   background-color: white;
   overflow: scroll;
   border-bottom: 1px solid $color1;
@@ -46,6 +50,13 @@
   border-bottom: 2px solid $color1;
   text-align: center;
   margin-bottom: 20px;
+
+}
+
+.refresh-map-container {
+  display: flex;
+  justify-content: center;
+  border-bottom: 1px solid $color1;
 }
 
 // RIGHT
