Added more styling to dashboard and host page

--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -3,6 +3,7 @@ $color2: #784F8A;
 $color3: #EAE9F0;
 $color4: #F2E2AE;
 $color5: #BDB5A5;
+$color6: #514B70;
 
 $color1rgb: 181, 165, 189;
 $color2rgb: 120, 79, 138;
