--- a/app/assets/stylesheets/etc/nav.scss
+++ b/app/assets/stylesheets/etc/nav.scss
@@ -79,7 +79,7 @@
   background: none;
   border: none;
   cursor: pointer;
-  margin-top: 5%;
+  margin-top: 10px;
   transition: background-color .2s;
 }
 
