--- a/app/assets/stylesheets/pages/host-page.scss
+++ b/app/assets/stylesheets/pages/host-page.scss
@@ -15,7 +15,9 @@
   font-size: $large-font;
   border-bottom: 2px solid $color2;
   margin-bottom: 20px;
+  padding-bottom: 5px;
 }
+
 
 // LEFT
 .host-page-left {
@@ -27,9 +29,27 @@
 .host-profile {
   margin: 20px;
   padding: 20px;
-  height: 20%;
+  height: 40%;
+  min-height: 250px;
   background-color: white;
+  text-align: center;
   border-bottom: 2px solid $color1;
+}
+
+.host-profile > h2 {
+  padding-bottom: 5px;
+  margin-bottom: 20px;
+  font-size: $normal-font;
+  color: $color6;
+  word-wrap: break-word;
+  border-bottom: 1px solid $color1;
+}
+
+.host-profile > h2:last-child {
+  border-top: 1px solid $color1;
+  border-bottom: none;
+  padding-top: 10px;
+  margin-top: 25%;
 }
 
 // RIGHT
@@ -44,7 +64,7 @@
 .host-schedule {
   text-align: center;
   padding: 20px;
-  height: 25%;
+  height: 30%;
   background-color: white;
   margin-bottom: 20px;
   border-bottom: 2px solid $color1;
@@ -57,6 +77,26 @@
   justify-content: space-between;
 }
 
+.host-schedule-select {
+  background-color: $color3;
+  text-align-last: center;
+  border-style: none;
+  transition: background-color .2s;
+  font-size: 15px;
+}
+
+.host-schedule-select:hover {
+  background-color: $color2;
+  cursor: pointer;
+  color: white;
+}
+
+.host-schedule-select option {
+  background-color: white;
+  color: black;
+  text-align: center;
+}
+
 .host-schedule > form > select {
   margin-left: 40%;
   margin-right: 40%;
@@ -67,7 +107,30 @@
   margin-right: 40%;
 }
 
+.schedule-date {
+  margin-left: 25%;
+  margin-right: 25%;
+}
+
+.schedule-date-span {
+}
+
+.host-schedule input[type='submit'] {
+  border-style: none;
+  background-color: $color3;
+  transition: background-color .2s;
+  font-size: $small-font;
+}
+
+.host-schedule input[type='submit']:hover {
+  border-style: none;
+  background-color: $color2;
+  color: white;
+  cursor: pointer;
+}
+
 .host-overview {
+  overflow-y: scroll;
   padding: 20px;
   height: 25%;
   background-color: white;
@@ -76,9 +139,19 @@
 }
 
 .host-about {
+  overflow-y: scroll;
   padding: 20px;
-  height: 25%;
+  height: 20%;
   background-color: white;
   margin-bottom: 20px;
   border-bottom: 2px solid $color1;
+}
+
+.host-about > p {
+  color: $color6;
+  text-align: center;
+  padding-top: 0px;
+  padding-right: 15px;
+  padding-bottom: 15px;
+  padding-left: 15px;
 }
