--- a/app/assets/stylesheets/pages/search.scss
+++ b/app/assets/stylesheets/pages/search.scss
@@ -40,8 +40,12 @@
   transition: background-color .2s;
 }
 
+.host-index > h1 {
+  margin: 5px;
+}
+
 .host-index:hover {
-  background-color: $color1;
+  background-color: $color3;
   cursor: pointer;
 }
 
@@ -50,7 +54,6 @@
   border-bottom: 2px solid $color1;
   text-align: center;
   margin-bottom: 20px;
-
 }
 
 .refresh-map-container {
