--- a/app/assets/stylesheets/pages/host-page.scss
+++ b/app/assets/stylesheets/pages/host-page.scss
@@ -30,7 +30,7 @@
   margin: 20px;
   padding: 20px;
   height: 40%;
-  min-height: 250px;
+  min-height: 325px;
   background-color: white;
   text-align: center;
   border-bottom: 2px solid $color1;
@@ -46,7 +46,6 @@
 }
 
 .host-profile > h2:last-child {
-  border-top: 1px solid $color1;
   border-bottom: none;
   padding-top: 10px;
   margin-top: 25%;
@@ -65,6 +64,7 @@
   text-align: center;
   padding: 20px;
   height: 30%;
+  min-height: 200px;
   background-color: white;
   margin-bottom: 20px;
   border-bottom: 2px solid $color1;
@@ -136,6 +136,50 @@
   background-color: white;
   margin-bottom: 20px;
   border-bottom: 2px solid $color1;
+}
+
+.host-review-form {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.host-review-form > input {
+  margin: 10px;
+}
+
+.host-review-form > input[type='submit'] {
+  border-style: none;
+  background-color: $color3;
+  transition: background-color .2s;
+  font-size: $small-font;
+  margin-left: 40%;
+  margin-right: 40%;
+}
+
+.host-review-form > input[type='submit']:hover {
+  border-style: none;
+  background-color: $color2;
+  color: white;
+  cursor: pointer;
+}
+
+.star-radio > input[type="radio"] {
+  -webkit-appearance: none;
+  width: 27px;
+  height: 27px;
+  background-image: url(../assets/stars.png);
+  vertical-align: bottom;
+}
+
+.star-radio > input[type="radio"]:checked {
+  background-position: 30px 30px;
+}
+
+
+.star-radio > input[type="radio"]:hover {
+  border-bottom: 1px solid $color2;
+  cursor: pointer;
 }
 
 .host-about {
