--- a/app/assets/stylesheets/pages/search.scss
+++ b/app/assets/stylesheets/pages/search.scss
@@ -24,7 +24,8 @@
   margin: 20px;
   padding: 30px;
   width: 100%;
-  height: 70%;
+  min-width: 400px;
+  height: 80%;
   background-color: white;
   overflow: scroll;
   border-bottom: 1px solid $color1;
@@ -34,19 +35,57 @@
   margin-top: 10px;
   display: flex;
   flex-direction: column;
-  text-align: center;
+  text-align: left;
   border-bottom: 1px solid black;
-  padding: 10px;
+  padding: 15px;
   transition: background-color .2s;
-}
-
-.host-index > h1 {
-  margin: 5px;
 }
 
 .host-index:hover {
   background-color: $color3;
+}
+
+.host-profile-container{
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 15px;
+}
+
+.host-icon {
+  margin-right: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  text-transform: capitalize;
+  width: 50px;
+  height: 50px;
+  background-color: $color2;
+  color: white;
+  transition: background-color 0.2s;
+}
+
+.host-icon:hover {
+  color: black;
+  background-color: $color4;
   cursor: pointer;
+}
+
+.host-username {
+  font-size: $normal-font;
+  text-transform: capitalize;
+  padding-bottom: 5px;
+}
+
+.host-username:hover {
+  cursor: pointer;
+  color: blue;
+  border-bottom: 2px solid $color6;
+}
+
+.host-detail {
+  margin-top: 10px;
 }
 
 .search-page-list-title {
@@ -59,4 +98,9 @@
 // RIGHT
 .search-page-right {
   width: 60%;
+}
+
+.marker-info {
+  width: 400px;
+  height: 400px;
 }
