added code to keep dynos awake

--- a/app/assets/stylesheets/pages/host-page.scss
+++ b/app/assets/stylesheets/pages/host-page.scss
@@ -129,6 +129,11 @@
   cursor: pointer;
 }
 
+.booking-error-list {
+  padding-top: 10px;
+  color: red;
+}
+
 .host-overview {
   overflow-y: scroll;
   padding: 20px;
