--- a/app/assets/stylesheets/pages/host-page.scss
+++ b/app/assets/stylesheets/pages/host-page.scss
@@ -202,6 +202,11 @@
   cursor: pointer;
 }
 
+.stars {
+  font-weight: bolder;
+  color: orangered;
+}
+
 .star-radio {
   -webkit-appearance:none;
   -moz-appearance:none;
