--- a/app/assets/stylesheets/etc/nav.scss
+++ b/app/assets/stylesheets/etc/nav.scss
@@ -34,6 +34,7 @@
   background-color: inherit;
   background: none;
   border: none;
+  border-radius: 5px;
   display: flex;
   align-items: center;
   justify-content: center;
