--- a/app/assets/stylesheets/pages/search.scss
+++ b/app/assets/stylesheets/pages/search.scss
@@ -1,6 +1,7 @@
 .search-page {
-  height: inherit;
+  height: 100vh;
   width: inherit;
+  overflow: hidden;
 }
 
 .search-page-content {
@@ -15,7 +16,6 @@
   width: 30%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   margin-left: 60px;
 }
