--- a/app/assets/stylesheets/pages/host-page.scss
+++ b/app/assets/stylesheets/pages/host-page.scss
@@ -22,8 +22,22 @@
 // LEFT
 .host-page-left {
   width: 30%;
-  height: 100%;
   min-width: 250px;
+}
+
+.host-img-and-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.host-profile-img {
+  height: 150px;
+  width: 150px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin-bottom: 20px;
 }
 
 .host-profile {
